Refine storybook examples of Text group components

--- a/src/ui.text-notify/storybook/docs.mdx
+++ b/src/ui.text-notify/storybook/docs.mdx
@@ -36,7 +36,7 @@ notify({
 });
 
 notifySuccess({ description: "The file successfully downloaded." });
-notifyWarning({ description: "The file have been downloaded, but some data is missing." });
+notifyWarning({ description: "The file has been downloaded, but some data is missing." });
 notifyError({ description: "The file can't be downloaded, please check the fields and try again." });
 `} language="jsx" dark />
 
