--- a/src/ui.data-table/storybook/docs.mdx
+++ b/src/ui.data-table/storybook/docs.mdx
@@ -13,14 +13,32 @@ import defaultConfig from "../config.ts?raw"
 <Stories of={stories} />
 
 ## Row meta keys
-Keys you have/may to provide to the component in row object.
+Keys you may/have to provide to the component in the row object.
 
 <Markdown>
 {`
-|  Key name         | Description                        | Type           |
-| ------------------| ---------------------------------- | ---------------|
-| id                | A unique identifier for row        | String, Number |
-| rowDate           | Row date for date divider          | String, Date   |
+| Key name      | Description                                         | Type                                    |
+| ------------- | --------------------------------------------------- | ----------------------------------------|
+| id            | Unique identifier for the row                       | String, Number                          |
+| rowDate       | Row date for date divider                           | String, Date                            |
+| row           | Nested row(s) for hierarchical tables               | Object, Array                           |
+| class         | Custom classes for the row                          | String                                  |
+
+`}
+</Markdown>
+
+## Cell meta keys
+- Any key matching a column's property (e.g. orderId, customerName, ...)
+- Value can be a string/number, or a CellObject:
+
+<Markdown>
+{`
+| CellObject key   | Description                                 | Type                                 |
+| ---------------- | ------------------------------------------- | ------------------------------------ |
+| value            | Cell value                                  | String, Number                       |
+| class            | Classes for the cell                        | String                               |
+| contentClass     | Classes for the cell content                | String                               |
+
 `}
 </Markdown>
 
