Add default 'vueless' theme instead of separate light/dark

--- a/src/directives/tooltip/storybook/docs.mdx
+++ b/src/directives/tooltip/storybook/docs.mdx
@@ -10,7 +10,7 @@ import * as stories from "./stories.ts";
 <Stories of={stories} />
 
 ## Theme Configuration
-You can use Vueless’s default light/dark themes or create your own [custom one](https://atomiks.github.io/tippyjs/v6/themes/) via the global Vueless config:
+You can use the default `vueless` theme or create your own [custom one](https://atomiks.github.io/tippyjs/v6/themes/) via the global Vueless config:
 
 <Source code={`
   directives: {
@@ -21,7 +21,7 @@ You can use Vueless’s default light/dark themes or create your own [custom one
 `} language="jsx" dark />
 
 ## Customizing Styles
-To customize the default light/dark or your own custom theme, simply update your CSS as shown below:
+To customize the default `vueless` or your own custom theme, simply update your CSS as shown below:
 
 <Source code={`
   .tippy-box[data-theme~="custom"] {
