Fixed import path for Storybook stories module.

--- a/src/ui.boilerplate/storybook/docs.mdx
+++ b/src/ui.boilerplate/storybook/docs.mdx
@@ -1,7 +1,7 @@
 import { Meta, Title, Subtitle, Description, Primary, Controls, Stories, Source } from "@storybook/addon-docs/blocks";
 import { getSource } from "../../utils/storybook";
 
-import * as stories from "./stories.js";
+import * as stories from "./stories";
 import defaultConfig from "../config?raw"
 
 <Meta of={stories} />
