feat: add info notification type to UNotify component
Add new 'info' notification type to UNotify component using the existing 'info' color from the design system. This enhancement provides users with an additional notification type for informational messages.

Changes include:
- Add NotificationType.Info enum value
- Add info-specific styling with blue gradient background and icon
- Add notifyInfo utility function following existing patterns
- Add info notification test case
- Update Storybook stories with info button example
- Export notifyInfo function from main index

The implementation follows existing patterns and uses the design system's info color (blue) for consistent theming across light and dark modes.

--- a/src/ui.text-notify/storybook/docs.mdx
+++ b/src/ui.text-notify/storybook/docs.mdx
@@ -17,13 +17,14 @@ import defaultConfig from "../config?raw"
 
 ## Triggering notification
 You can trigger notification using `notify` method.
-Use `notifySuccess`, `notifyWarning`, `notifyError` shortcut methods to trigger notification of a specific type.
+Use `notifySuccess`, `notifyWarning`, `notifyInfo`, `notifyError` shortcut methods to trigger notification of a specific type.
 
 <Source code={`
 import {
     notify,
     notifySuccess,
     notifyWarning,
+    notifyInfo,
     notifyError,
 } from "vueless";
 
@@ -37,6 +38,7 @@ notify({
 
 notifySuccess({ description: "The file successfully downloaded." });
 notifyWarning({ description: "The file has been downloaded, but some data is missing." });
+notifyInfo({ description: "Starting download..." });
 notifyError({ description: "The file can't be downloaded, please check the fields and try again." });
 `} language="jsx" dark />
 
