--- a/src/ui.form-checkbox-group/storybook/docs.mdx
+++ b/src/ui.form-checkbox-group/storybook/docs.mdx
@@ -3,6 +3,7 @@ import { getSource } from "../../utils/storybook";
 
 import * as stories from "./stories";
 import defaultConfig from "../config?raw"
+import CheckboxOptionKeys from "../../ui.form-checkbox/storybook/optionKeys.mdx"
 
 <Meta of={stories} />
 <Title of={stories} />
@@ -12,8 +13,7 @@ import defaultConfig from "../config?raw"
 <Controls of={stories.Default} />
 <Stories of={stories} />
 
-## Option meta keys
-Full list of keys you may/have to provide to the component in an option object can be found here: <a href="https://ui.vueless.com/?path=/docs/3100--docs" target="_blank">UCheckbox docs</a>.
+<CheckboxOptionKeys />
 
 ## Default config
 <Source code={getSource(defaultConfig)} language="jsx" dark />
