feat: add UAvatarGroup component and enhance UAvatar with chip support
- Introduced UAvatarGroup component for grouping avatars.
- Enhanced UAvatar to support a chip configuration, allowing for additional visual elements.
- Updated related types and configurations to accommodate new features.
- Modified storybook stories to demonstrate new functionalities and configurations.

--- a/src/ui.image-avatar/storybook/docs.mdx
+++ b/src/ui.image-avatar/storybook/docs.mdx
@@ -1,4 +1,4 @@
-import { Meta, Title, Subtitle, Description, Primary, Controls, Stories, Source } from "@storybook/addon-docs/blocks";
+import { Meta, Title, Subtitle, Description, Primary, Controls, Stories, Source, Markdown } from "@storybook/addon-docs/blocks";
 import { getSource } from "../../utils/storybook";
 
 import * as stories from "./stories";
@@ -11,6 +11,21 @@ import defaultConfig from "../config?raw"
 <Primary of={stories}  />
 <Controls of={stories.Default} />
 <Stories of={stories} />
+
+## Chip Object Properties
+Keys you may/have to provide to the component in a `chip` object.
+
+<Markdown>
+{`
+|  Key name              | Description                                           | Type                    |
+| ---------------------- | ----------------------------------------------------- | ----------------------- |
+| icon                   | Chip icon name                                        | String                  |
+| color                  | Chip color                                            | String                  |
+| xPosition              | Chip x-axis position                                  | String                  |
+| yPosition              | Chip y-axis position                                  | String                  |
+| inset                  | Display the chip inside the component                 | Boolean                 |
+`}
+</Markdown>
 
 ## Default config
 <Source code={getSource(defaultConfig)} language="jsx" dark />
